--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -8,6 +8,7 @@ body {
   color: #000;
   font-size: 1rem;
   font-smoothing: antialiased;
+  font-family: $font-primary--light;
   line-height: 1.33;
   text-rendering: optimizeLegibility;
 }
