--- a/src/sass/generic/_mixins.scss
+++ b/src/sass/generic/_mixins.scss
@@ -1,35 +1,52 @@
 // scss-lint:disable Indentation
 //Responsive Font Sizes
 @mixin set-font-size($small-font: '1.5rem', $medium-font: '1.8rem', $large-font: '2.5rem') {
+
 	font-size: #{$small-font};
 
-	@include breakpoint($large) {
+	@include breakpoint($medium) {
 		font-size: #{$medium-font};
 	}
 
-	@include breakpoint($x-large) {
+	@include breakpoint($large) {
 		font-size: #{$large-font};
 	}
 }
 
-// Mixin for webfont
-@mixin web-font($font-name: 'FONT NAME', $file-path: '/PATHTOFONT/', $file-name: 'FONTNAME') {
-	$full-path: $file-path + $file-name;
-
-	@font-face {
-		font-family: '#{$font-name}';
-		src: url('#{$full-path}.eot');
-		src: url('#{$full-path}.eot?#iefix') format('embedded-opentype'),
-		url('#{$full-path}.woff2') format('woff2'),
-		url('#{$full-path}.woff') format('woff'),
-		url('#{$full-path}.ttf') format('truetype'),
-		url('#{$full-path}.svg##{$file-name}') format('svg');
-		font-weight: normal;
-		font-style: normal;
-	}
+@mixin web-font(
+  $font-name: 'FONT NAME',
+  $file-path: '/PATHTOFONT/',
+  $file-name: 'FONTNAME'
+  ){
+  $full-path: $file-path + $file-name;
+  @font-face {
+    font-family: '#{$font-name}';
+    font-style: normal;
+    font-weight: normal;
+    // IE9 Compat Modes
+    src: url('#{$full-path}.eot');
+    // IE6-IE8
+    src: url('#{$full-path}.eot?#iefix') format('embedded-opentype'),
+        // Modern Browsers
+        url('#{$full-path}.woff') format('woff'),
+        // Safari, Android, iOS
+        url('#{$full-path}.ttf') format('truetype'),
+        // Legacy iOS
+        url('#{$full-path}.svg#{$file-name}') format('svg');
+    }
 }
 
 //Keep the aspect ratio fixed for certain elements. i.e. Video
+
+/* aspect ratio  | padding-bottom value
+--------------|----------------------
+    16:9      |       56.25%
+    4:3       |       75%
+    3:2       |       66.66%
+    8:5       |       62.5%
+
+@include aspect-ratio(3,2); */
+
 @mixin aspect-ratio($width, $height) {
 	position: relative;
 
@@ -62,7 +79,7 @@
 	&::after {
 		clear: both;
 		content: '';
-    display: table;
+    	display: table;
   }
 }
 
@@ -75,8 +92,7 @@
 @mixin vertical-align($position: relative) {
   position: $position;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
+  // -webkit-transform: translateY(-50%);
+  // -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-
