--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -29,6 +29,7 @@
 @import 'base/form';
 @import 'base/table';
 @import 'base/typography';
+@import 'base/fonts';
 @import 'base/general';
 
 // Partials
