--- a/src/sass/generic/_variables.scss
+++ b/src/sass/generic/_variables.scss
@@ -7,6 +7,17 @@ $black: #000;
 $white: #fff;
 $grey: #999;
 
+$orange: #F7931E;
+$green: #87C242;
+$blue: #55BAEE;
+
+$grey--dark: #4D4D4D;
+$grey--darker: darken($grey--dark, 6%);
+$grey--light: #808080;
+$grey--lighter: lighten($grey--light, 30%);
+
+
+
 //Typefaces
 $arial: 'Arial', sans-serif;
 
@@ -31,6 +42,25 @@ $large: 1024px;
 $x-large: 1280px;
 $xx-large: 1600px;
 
+// max width
+$max-width-small: max-width $small - 1;
+$max-width-medium: max-width $medium - 1;
+$max-width-large: max-width $large - 1;
+$max-width-x-large: max-width $x-large - 1;
+$max-width-xx-large: max-width $xx-large - 1;
+
+//Spacing
+$margin-default: 4rem;
+
+$spacing--x-tiny: .5rem;
+$spacing--tiny: 1rem;
+$spacing--small: 2rem;
+$spacing--medium: 3rem;
+$spacing--large: 4rem;
+$spacing--x-large: 5rem;
+$spacing--xx-large: 6rem;
+$spacing--jumbo: 10rem;
+
 //Spacing
 $margin-default: 4rem;
 
@@ -38,6 +68,6 @@ $margin-default: 4rem;
 $button-width: 18px;                    // The width of the button area
 $button-height: 18px;                   // The height of the button area
 $bar-thickness: 2px;                    // The thickness of the button bars
-$button-pad: 0;                      // The left/right padding between button area and bars.
+$button-pad: 0;                         // The left/right padding between button area and bars.
 $button-bar-space: 4px;                // The spacing between button bars
 $button-transistion-duration: .3s;     // The transition duration
