--- a/src/sass/generic/_mixins.scss
+++ b/src/sass/generic/_mixins.scss
@@ -89,10 +89,10 @@
   top: 0; left: 0; bottom: 0; right: 0;
 }
 
-@mixin vertical-align($position: relative) {
+@mixin vertical-align($position: relative, $top: 50%) {
   position: $position;
-  top: 50%;
+  top: $top;
   // -webkit-transform: translateY(-50%);
   // -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  transform: translateY(-$top);
 }
