--- a/src/sass/generic/_variables.scss
+++ b/src/sass/generic/_variables.scss
@@ -9,12 +9,17 @@ $grey: #999;
 
 $orange: #F7931E;
 $green: #87C242;
+$green--dark: darken($green, 10%);
 $blue: #55BAEE;
+$blue--dark: darken($blue, 10%);
 
 $grey--dark: #4D4D4D;
 $grey--darker: darken($grey--dark, 6%);
 $grey--light: #808080;
 $grey--lighter: lighten($grey--light, 30%);
+
+$stroke: #5A5A5A;
+$stroke--light: lighten($stroke, 10%);
 
 
 
