--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,6 +24,13 @@
 //Vendors
 @import 'vendor/hamburger';
 @import 'vendor/slick';
+@import 'vendor/remodal';
+@import 'vendor/remodal-default-theme';
+
+// Utilities
+@import 'utilities/visibility-utilities';
+@import 'utilities/spacing';
+@import 'utilities/u-responsive-iframe';
 
 //Base
 @import 'base/button';
@@ -46,3 +53,4 @@
 
 //Organsisms
 @import 'organisms/o-hero-carousel';
+@import 'organisms/o-event-banner';
