--- a/src/sass/utilities/_spacing.scss
+++ b/src/sass/utilities/_spacing.scss
@@ -44,6 +44,7 @@
     max-width: 1280px; //1280px
     position: relative;
 
+
     &--padding-top {
 
         @include breakpoint($medium) {
@@ -57,6 +58,12 @@
     &--tiny {
 
         max-width: 60em; //600px
+
+    }
+
+    &--smaller {
+
+        max-width: 75em; //850px
 
     }
 
