--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -46,6 +46,7 @@
 @import 'partials/header';
 @import 'partials/footer';
 @import 'partials/homepage';
+@import 'partials/mobile-menu';
 
 //Atoms
 @import 'atoms/a-site-nav';
