--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -4,11 +4,11 @@
 	color: $white;
 	@include set-font-size(1.6rem, 1.6rem, 1.6rem);
 	color: $grey--lighter;
-	padding: $spacing--small;
+	padding: $spacing--x-small $spacing--small;
 
 	@include breakpoint($small) {
 
-		padding: 0 $spacing--small;
+		padding: $spacing--small;
 
 	}
 
@@ -18,7 +18,9 @@
 
 		width: 130px;
 		height: 61px;
-		margin: $spacing--x-tiny 0;
+		//margin: $spacing--x-tiny 0;
+		@include vertical-align(absolute);
+		left: 0;
 
 	}
 
@@ -62,9 +64,10 @@
 	&__copyright {
 
 		@include set-font-size(1.1rem, 1.1rem, 1.1rem);
-		border-top: solid 1px $stroke;
-		padding: $spacing--small;
+		//border-top: solid 1px $stroke;
+		padding: $spacing--x-small 0;
 		text-align: center;
+		display: block;
 
 	}
 
@@ -87,7 +90,7 @@
 	&__item {
 
 		color: $white;
-		margin-right: $spacing--small;
+		margin: 0 $spacing--tiny;
 
 		&:hover {
 
@@ -104,7 +107,9 @@
 
 	@include set-font-size(1.6rem, 1.6rem, 1.6rem);
 	text-align: center;
-	padding: $spacing--small;
+	//padding: $spacing--small;
+	@include vertical-align(absolute);
+	right: 0;
 
 	@include breakpoint($small) {
 
