--- a/src/sass/generic/_variables.scss
+++ b/src/sass/generic/_variables.scss
@@ -57,13 +57,17 @@ $max-width-xx-large: max-width $xx-large - 1;
 //Spacing
 $margin-default: 4rem;
 
+
 $spacing--x-tiny: .5rem;
 $spacing--tiny: 1rem;
+$spacing--x-small: 1.5rem;
 $spacing--small: 2rem;
+$spacing--x-medium: 2.5rem;
 $spacing--medium: 3rem;
+$spacing--x-large: 3.5rem;
 $spacing--large: 4rem;
-$spacing--x-large: 5rem;
-$spacing--xx-large: 6rem;
+$spacing--large-x: 5rem;
+$spacing--large-xx: 6rem;
 $spacing--jumbo: 10rem;
 
 //Spacing
