Footer styling updated, list child pages created, widgets active

--- a/src/sass/atoms/_a-site-nav.scss
+++ b/src/sass/atoms/_a-site-nav.scss
@@ -30,7 +30,8 @@
         }
 
         //Current menu item
-        .current-menu-item {
+        .current-menu-item,
+        .current-page-ancestor {
 
             a {
 
