--- a/src/sass/organisms/_o-subpage-hero.scss
+++ b/src/sass/organisms/_o-subpage-hero.scss
@@ -27,14 +27,14 @@
         display: inline-block;
         margin-right: $spacing--tiny;
         padding: $spacing--tiny $spacing--x-small;
-        background-color: $orange;
+        background-color: $grey--dark;
         color: $white;
         font-family: $font-primary--regular;
         @include set-font-size(2.4rem, 2.4rem, 2.4rem);
 
-        &:first-child {
+        &__main-title {
 
-            background-color: $grey--dark;
+            background-color: $orange;
 
         }
 
