--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -56,3 +56,8 @@
 @import 'organisms/o-hero-carousel';
 @import 'organisms/o-event-banner';
 @import 'organisms/o-subpage-hero';
+@import 'organisms/o-side-navigation';
+@import 'organisms/o-course-filter';
+
+// Lost grid
+@import 'lost/l-lost-grid';
