--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -61,6 +61,7 @@
 @import 'organisms/o-course-listing';
 @import 'organisms/o-course';
 @import 'organisms/o-accordion';
+@import 'organisms/o-masonry';
 
 // Lost grid
 @import 'lost/l-lost-grid';
